--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Day Trading Stock Tracker</h1>
+        <h1>Stock Portfolio</h1>
         <table>
             <tr>
             <th>Stock Name</th>
